--- a/.env-template
+++ b/.env-template
@@ -16,6 +16,10 @@ REACT_APP_MAPBOX_ACCESS_TOKEN=
 REACT_APP_SHARETRIBE_MARKETPLACE_CURRENCY=USD
 REACT_APP_CANONICAL_ROOT_URL=http://localhost:3000
 
+# Language 
+# added by yamahiro.offto@gmail.com
+REACT_APP_LOCALE=en
+
 # This is overwritten by configuration in .env.development and
 # .env.test. In production deployments use env variable and set it to
 # 'production'
