--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Sharetribe Flex Template Demo",
   "description": "Sharetribe Flex Template Demo - Saunatime!",
   "keywords": ["node", "react"],
-  "repository": "https://github.com/sharetribe/ftw-daily/",
+  "repository": "https://github.com/yamahiro-offto/offto-sharetribe-flex-web",
   "env": {
     "REACT_APP_MAPBOX_ACCESS_TOKEN": {
       "description": "See: Integrating to map providers documentation https://github.com/sharetribe/ftw-daily/blob/master/docs/map-providers.md"
@@ -39,6 +39,10 @@
     "REACT_APP_CSP": {
       "description": "See: Content Security Policy (CSP) documentation https://github.com/sharetribe/ftw-daily/blob/master/docs/content-security-policy.md",
       "value": "report"
+    },
+    "REACT_APP_LOCALE": {
+      "description": "Language displayed in web pages.",
+      "value": "en"
     }
   }
 }
